--- a/index.html
+++ b/index.html
@@ -214,14 +214,7 @@ let saved = "";
 let blockData = [];
 
 // Big/Small prediction numbers from 2dd.html
-const bigNumbers = [
-  0, 111, 333, 444, 555, 888, 999,
-  44, 66, 77, 88, 99, 1, 4, 6, 9,
-  12, 14, 15, 18, 24, 28,
-  31, 35, 38, 39, 42, 43, 46, 47,
-  53, 56, 59, 63, 64, 68, 72, 74, 76, 78, 79,
-  83, 84, 86, 89, 94, 96
-];
+const bigNumbers = [ 00, 11 ,55, 88, 99, 01, 03, 04, 08, 12, 15, 18, 19, 25, 29, 35, 32, 38, 39, 40, 41, 42, 43, 46, 47, 50, 53, 56, 61, 63, 68, 71, 72, 73, 74, 76, 78, 80, 83, 85, 89, 94, 96 ];
 
 // Big/Small prediction function from 2dd.html
 function checkBigSmall() {
