--- a/index.html
+++ b/index.html
@@ -214,7 +214,13 @@ let saved = "";
 let blockData = [];
 
 // Big/Small prediction numbers from 2dd.html
-const bigNumbers = [ 00, 11 ,55, 88, 99, 01, 03, 04, 08, 12, 15, 18, 19, 25, 29, 35, 32, 38, 39, 40, 41, 42, 43, 46, 47, 50, 53, 56, 61, 63, 68, 71, 72, 73, 74, 76, 78, 80, 83, 85, 89, 94, 96 ];
+const bigNumbers = [
+      00, 11 ,55, 99, 01, 02, 03, 05,
+      12, 15, 16, 18, 23, 24, 25, 29,
+      35, 34, 37, 39, 40, 41, 47, 49,
+      50, 51, 52, 53, 56, 59, 61, 64, 67, 68,
+      72, 73, 76, 79, 83, 85, 90, 94
+    ];
 
 // Big/Small prediction function from 2dd.html
 function checkBigSmall() {
