Update label for Target Block Number

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="box">
       <h2>🧠 Block Analysis AI Prediction</h2>
 
-      <label for="aiStartBlock">📦 Target Block Number (20 ခြား):</label><br>
+      <label for="aiStartBlock">📦 Target Block Number :</label><br>
       <input type="number" id="aiStartBlock" value="78037989"><br>
 
       <button onclick="runAIAnalysis()">🤖 AI ခန့်မှန်းရန်</button>
