Update block numbers in index.html

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <h2>🎯 Block Hash Analysis</h2>
 
       <label for="startBlock">📦 Start Block Number:</label><br>
-      <input type="number" id="startBlock" value="73030858"><br>
+      <input type="number" id="startBlock" value="78149017"><br>
 
       <label for="count">🔢 Number of Blocks:</label><br>
       <input type="number" id="count" value="5"><br>
@@ -218,8 +218,8 @@
     <div class="box">
       <h2>🧠 Block Analysis AI Prediction</h2>
 
-      <label for="aiStartBlock">📦 Target Block Number (20 ခြား):</label><br>
-      <input type="number" id="aiStartBlock" value="73030878"><br>
+      <label for="aiStartBlock">📦 Target Block Number :</label><br>
+      <input type="number" id="aiStartBlock" value="78149017"><br>
 
       <button onclick="runAIAnalysis()">🤖 AI ခန့်မှန်းရန်</button>
 
